telnet: Fix telnet segfault when invalid set or help help commands

Silently ignore invalid set ' ' and invalid help help commands.
This is the same fix applied by NetBSD in hg commit 1019940:4f248823eaff.

PR:		265097
Reported by:	Simon Josefsson <simon@josefsson.org>
Obtained from:	NetBSD hg commit 1019940:4f248823eaff
		NetBSD PR/56918

(cherry picked from commit a7399ea2dd7810e76dcfd52248764cb8004d49a4)